fix: align desktop brand beside logo

--- a/frontend/src/components/Header.scss
+++ b/frontend/src/components/Header.scss
@@ -31,6 +31,7 @@
           justify-self: start;
           min-width: 0;
           text-decoration: none;
+          width: max-content;
         }
         .site-header__logo {
           display: inline-flex;
